<resources>
    <string name="app_name">biz-account</string>
    <string name="account_phone_binding_title">设置绑定手机</string>
    <string name="account_phone_binding_ok">确认</string>
    <string name="account_phone_hint">手机号</string>
    <string name="account_phone_new_hint">新手机号</string>
    <string name="account_code">验证码</string>
    <string name="account_phone_modify_title">修改绑定手机</string>
    <string name="account_email_binding_title">设置绑定邮箱</string>
    <string name="account_email_hint">邮箱</string>
    <string name="account_email_new_hint">新邮箱</string>
    <string name="account_email_modify_title">修改绑定邮箱</string>
    <string name="account_get_code">获取验证码</string>
    <string name="account_google_verify_title">开启谷歌验证</string>
    <string name="account_google_close_title">关闭谷歌验证</string>
    <string name="account_google_unbind_title">解绑谷歌验证</string>
    <string name="account_close">关闭</string>
    <string name="account_start">开启</string>
    <string name="account_start_verify">开启验证</string>
    <string name="account_google_verify_download_tips">下载并安装谷歌验证器APP</string>
    <string name="account_google_verify_qr_tips">如果无法扫描二维码，可以将该秘钥\n手动输入到谷歌验证器APP中</string>
    <string name="account_google_verify_secret_key">秘钥：%1$s</string>
    <string name="account_google_verify_installed_tips">我已安装APP</string>
    <string name="account_google_verify_download">Download it from\nAndroid 下载</string>
    <string name="account_email_verify">邮箱验证</string>
    <string name="account_email_verify_tips">请输入邮箱验证</string>
    <string name="account_phone_verify">手机验证</string>
    <string name="account_google_verify">谷歌验证</string>
    <string name="account_phone_manager">管理手机号</string>
    <string name="account_google_verify_modify">修改谷歌验证</string>
    <string name="account_google_verify_set">设置谷歌验证</string>
    <string name="account_secondary_verify">二次验证</string>
    <string name="account_close_verify">关闭验证</string>
    <string name="account_commit">提交</string>
    <string name="account_sms_verify_code">短信验证码</string>
    <string name="account_sms_verify_code_tips">请输入短信验证码</string>
    <string name="account_google_verify_code">谷歌验证码</string>
    <string name="account_google_verify_code_new">新谷歌验证码</string>
    <string name="account_google_verify_code_old">原谷歌验证码</string>
    <string name="account_phone_code">手机验证码</string>
    <string name="account_email_code">邮箱验证码</string>
    <string name="account_login_password">登录密码</string>
    <string name="account_fund_password">资金密码</string>
    <string name="account_set_asset_password_success">资金密码设置成功</string>
    <string name="account_reset_asset_password_success">资金密码重置成功</string>
    <string name="account_previous">上一步</string>
    <string name="account_next_step">下一步</string>
    <string name="account_copy_success">复制成功</string>
    <string name="account_phone_null_tips">请输入手机号码</string>
    <string name="account_password_null_tips">请输入登录密码</string>
    <string name="account_email_null_tips">请输入邮箱</string>
    <string name="account_code_email_null_tips">请输入邮箱验证码</string>
    <string name="account_code_null_tips">请输入手机验证码</string>
    <string name="account_code_null">请输入验证码</string>
    <string name="account_code_google_tips">请输入谷歌验证码</string>
    <string name="account_code_tips">%1$s秒后重试</string>
    <string name="account_cancel">取消</string>

    <!--认证-->
    <string name="account_author_message">认证信息</string>
    <string name="account_author_personal">个人认证</string>
    <string name="account_author_company">企业认证</string>
    <string name="account_author_real_name">实名认证</string>
    <string name="account_author_name">姓名</string>
    <string name="account_author_id_type">证件类型</string>
    <string name="account_author_id_type_card">身份证</string>
    <string name="account_author_id_type_passport">护照</string>
    <string name="account_author_id_type_driver">驾驶证</string>
    <string name="account_author_id_code">证件号码</string>
    <string name="account_author_id_upload">上传证件</string>
    <string name="account_author_face_img_tips">上传证件正面</string>
    <string name="account_author_face_tx_tips">请确保照片的内容完整并清晰可见。</string>
    <string name="account_author_back_img_tips">上传证件反面</string>
    <string name="account_author_back_img_pass_tips">上传护照封面</string>
    <string name="account_author_face_img_pass_tips">上传护照信息页</string>
    <string name="account_author_handheld_img_pass_tips">上传手持护照信息和个人签名</string>
    <string name="account_author_back_tx_tips">请确保照片的内容完整并清晰可见，证件必须在有效期内。</string>
    <string name="account_author_handheld_img_tips">上传手持证件信息和个人签名</string>
    <string name="account_author_handheld_tx_tips">请提供一张手持证件和个人签字的照片，个人签字的内容包含“WanShare”和当天日期</string>
    <string name="account_author_tips">◎ 上传清晰图片，大小不超过2M；\n◎ 面部清晰可见；\n◎ 无遮挡，无妆容；\n◎ 确保证件和个人签字的内容清晰可见。</string>
    <string name="account_author_confirm">确认</string>
    <string name="account_author_not">未认证</string>
    <string name="account_author_loading">审核中</string>
    <string name="account_author_fail">认证失败</string>
    <string name="account_author_success">已认证</string>
    <string name="account_author_success_pass">身份认证已通过</string>
    <string name="account_author_basic_info">基本信息(必填)</string>
    <string name="account_author_company_name">企业名</string>
    <string name="account_author_company_name_tips">认证成功后无法更改，用于发票抬头，请谨慎填写</string>
    <string name="account_author_company_address">公司地址</string>
    <string name="account_author_company_country">国家</string>
    <string name="account_author_company_area">地区</string>
    <string name="account_author_detailed_address">详细地址</string>
    <string name="account_author_logo_upload">上传LOGO<font color='#808F9E'>(必填)</font></string>
    <string name="account_author_logo_upload_tips">仅支持jpg、png、bup格式，不超过2M</string>
    <string name="account_author_company_info">企业信息</string>
    <string name="account_author_uniform_numbers">社会统一编号<font color='#808F9E'>(必填)</font></string>
    <string name="account_author_uniform_numbers_no">社会统一编号</string>
    <string name="account_author_registration_number">税务登记证编号</string>
    <string name="account_author_organization_number">组织机构编号</string>
    <string name="account_author_upload_business_license">上传营业执照副本<font color='#808F9E'>(必填)</font></string>
    <string name="account_author_contact_info">联系人信息(必填)</string>
    <string name="account_author_contact_name">联系人姓名</string>
    <string name="account_author_contact_phone">联系人电话</string>
    <string name="account_author_phone">联系电话</string>
    <string name="account_author_contact">联系人</string>
    <string name="account_author_read_server_agree">我已阅读并同意</string>
    <string name="account_author_server_protocol">服务协议</string>
    <string name="account_author_reset_confirm">重新认证</string>
    <string name="account_author_confirm_tips">请填写完整</string>
    <string name="account_author_upload_fail">上传图片失败</string>
    <string name="account_author_sample"><u>样例</u></string>
    <string name="account_author_fail_reason">失败原因：%1$s</string>
    <string name="account_author_company_log">请上传企业logo图片</string>
    <string name="account_author_company_business">请上传营业执照图片</string>


    <!--登陆-->
    <string name="account_phone_or_email">手机号或邮箱</string>
    <string name="account_password">密码</string>
    <string name="account_login">登录</string>
    <string name="account_pwd_forget">忘记密码</string>
    <string name="account_register">注册</string>
    <string name="account_register_tip">还没WanShare账号？</string>
    <string name="account_register_hint">立即注册</string>
    <string name="account_pwd_length_at_least_eight">密码长度不应小于8位</string>
    <string name="account_asset_pwd_length_at_least_eight">资金密码长度不应小于8位</string>
    <string name="account_please_input_username">请输入用户名</string>
    <string name="account_please_input_password">请输入密码</string>
    <string name="account_please_select_zone">请选择地区</string>
    <string name="account_please_agree_to_terms">请同意条款</string>
    <string name="account_please_click_get_verification_code">请点击获取验证码</string>
    <string name="account_zone">地区</string>
    <string name="account_invitation_code">邀请码（选填）</string>
    <string name="account_agree_to_the_terms">我已阅读并同意</string>
    <string name="account_terms">服务条款</string>
    <string name="account_forgot_password_verify_tip">如未收到验证码，请检查手机/邮件的垃圾箱</string>
    <string name="account_new_password">新密码</string>
    <string name="account_confirm_new_password">确认新密码</string>
    <string name="account_set_password">设置密码</string>
    <string name="account_please_input_phone_or_email">请输入手机号或邮箱</string>
    <string name="account_please_input_verification_code">请输入验证码</string>
    <string name="account_please_input_old_password">请输入旧密码</string>
    <string name="account_please_input_new_password">请输入新密码</string>
    <string name="account_please_confirm_new_password">请确认新密码</string>
    <string name="account_two_passwords_not_equal">两次密码输入不一致</string>
    <string name="account_modify_login_password">修改登录密码</string>
    <string name="account_modify_fund_password">修改资金密码</string>
    <string name="account_please_input_login_password">请输入登录密码</string>
    <string name="account_please_input_fund_password">请输入资金密码</string>
    <string name="account_please_confirm_fund_password">请确认资金密码</string>
    <string name="account_asset_password_not_equal">资金密码输入不一致</string>
    <string name="account_old_password">旧密码</string>>
    <string name="account_modify_fund_password_tip">为了您的资产安全，重置资金密码24小时内不允许提币</string>
    <string name="account_confirm_fund_password">确认资金密码</string>
    <string name="account_set_fund_password">设置资金密码</string>
    <string name="account_register_success">注册成功</string>
    <string name="account_password_is_weak">密码必须包含字母、数字、特殊字符的两种</string>
    <string name="account_verification_code_send_success">验证码发送成功</string>
    <string name="account_login_success">登录成功</string>
    <string name="account_email_is_illegal">邮箱格式不正确</string>
    <string name="account_verify_success">验证成功</string>
    <string name="account_reset_password_success">重置密码成功</string>


    <!--安全-->
    <string name="account_security">安全</string>
    <string name="account_founds_password">资金密码</string>
    <string name="account_modify">修改</string>
    <string name="account_setting">设置</string>
    <string name="account_turned_on">已开启</string>
    <string name="account_turned_off">已关闭</string>
    <string name="account_email_binding">邮箱绑定</string>
    <string name="account_phone_binding">手机绑定</string>
    <string name="account_google_binding">谷歌绑定</string>
    <string name="account_gesture_password">手势密码</string>

    <string name="account_permission_refuse">权限已拒绝</string>
</resources>
