<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <com.wanshare.common.widget.text.ClearAbleEditText
        android:id="@+id/et_old_password"
        style="@style/common_clear_able_edit_text_style"
        android:layout_marginTop="35dp"
        android:hint="@string/account_please_input_old_password"
        android:inputType="textPassword"
        app:eye_pwd="true" />

    <com.wanshare.common.widget.text.ClearAbleEditText
        android:id="@+id/et_new_password"
        style="@style/common_clear_able_edit_text_style"
        android:layout_marginTop="10dp"
        android:hint="@string/account_new_password"
        android:inputType="textPassword"
        app:eye_pwd="true" />

    <com.wanshare.common.widget.text.ClearAbleEditText
        android:id="@+id/et_confirm_password"
        style="@style/common_clear_able_edit_text_style"
        android:layout_marginTop="10dp"
        android:hint="@string/account_confirm_new_password"
        android:inputType="textPassword"
        app:eye_pwd="true" />

    <Button
        android:id="@+id/btn_commit"
        style="@style/btn_corner_blue_blue"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/account_commit" />


</LinearLayout>