<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_15"
        android:textColor="@color/color_gray_dark2"
        android:layout_marginTop="61dp"
        android:text="@string/account_google_verify_download_tips"/>


    <LinearLayout
        android:id="@+id/btn_google_verify_download"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:layout_marginTop="39dp"
        android:gravity="center_vertical"
        android:background="@drawable/account_google_download_shape_bg">
        
        
        <ImageView
            android:layout_width="34dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/ic_and"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textSize="@dimen/font_size_15"
            android:textColor="@color/color_white2"
            android:lineSpacingExtra="5dp"
            android:text="@string/account_google_verify_download"/>
        
        
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/account_google_verify_installed_tips"
        android:textColor="@color/color_gray_dark1"
        android:textSize="@dimen/font_size_15" />
    
    <Button
        android:id="@+id/btn_google_verify_next_steps"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/account_next_step"
        style="@style/btn_corner_blue_blue"/>
    
    

</LinearLayout>