<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray_light">

    <ImageView
        android:id="@+id/iv_logo_bg"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_denglu_beijing" />

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="14dp"
        android:paddingLeft="15dp"
        android:paddingRight="30dp"
        android:src="@drawable/selector_back_btn" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo_bg"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="-40dp"
        app:cardBackgroundColor="@color/color_white"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.wanshare.common.widget.text.ClearAbleEditText
                android:id="@+id/et_username"
                style="@style/common_clear_able_edit_text_style"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="30dp"
                android:hint="@string/account_phone_or_email"
                android:inputType="textEmailAddress" />

            <com.wanshare.common.widget.text.ClearAbleEditText
                android:id="@+id/et_password"
                style="@style/common_clear_able_edit_text_style"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="10dp"
                android:hint="@string/account_password"
                android:inputType="textPassword"
                app:eye_pwd="true" />

            <TextView
                android:id="@+id/tv_forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="45dp"
                android:padding="10dp"
                android:text="@string/account_pwd_forget"
                android:textSize="@dimen/font_size_14" />

            <Button
                android:id="@+id/btn_login"
                style="@style/btn_corner_blue_blue"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="30dp"
                android:text="@string/account_login" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_register_tip"
            android:textColor="@color/color_gray_dark2"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_register_hint"
            android:textColor="@color/color_red_light"
            android:textSize="@dimen/font_size_14" />
    </LinearLayout>


</RelativeLayout>