<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_google_start_code_new"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:hint="@string/account_google_verify_code_new"
        android:textSize="@dimen/font_size_14"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="9dp"
        android:layout_marginTop="35dp"
        android:inputType="number"
        android:background="@drawable/account_line_et_bg"/>

    <EditText
        android:id="@+id/et_google_start_code_old"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:hint="@string/account_google_verify_code_old"
        android:textSize="@dimen/font_size_14"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="9dp"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:background="@drawable/account_line_et_bg"/>


    <Button
        android:id="@+id/btn_google_start"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/account_google_verify_title"
        style="@style/btn_corner_blue_blue"/>

</LinearLayout>