<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--地区-->
        <LinearLayout
            android:id="@+id/ll_zone"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_zone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/account_zone"
                    android:paddingLeft="10dp"
                    android:textSize="@dimen/font_size_14" />

                <!--<EditText-->
                <!--android:id="@+id/et_zone"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@null"-->
                <!--android:editable="false"-->
                <!--android:focusable="true"-->
                <!--android:clickable="false"-->
                <!--android:hint="@string/account_zone"-->
                <!--android:textSize="@dimen/font_size_14" />-->

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_zc_tz" />
            </LinearLayout>

            <View
                android:id="@+id/underline_zone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_divider_height"
                android:background="@drawable/common_selector_bg_blue_gray" />

        </LinearLayout>

        <!--邮箱-->
        <com.wanshare.common.widget.text.ClearAbleEditText
            android:id="@+id/et_email"
            style="@style/common_clear_able_edit_text_style"
            android:layout_marginTop="10dp"
            android:hint="@string/account_email_hint"
            android:inputType="textEmailAddress" />

        <!--验证码-->
        <include layout="@layout/account_layout_verification_code" />


        <!--密码-->
        <com.wanshare.common.widget.text.ClearAbleEditText
            android:id="@+id/et_password"
            style="@style/common_clear_able_edit_text_style"
            android:layout_marginTop="10dp"
            android:hint="@string/account_password"
            android:inputType="textPassword"
            app:textPaddingLeft="10dp" />

        <!--邀请码-->
        <com.wanshare.common.widget.text.ClearAbleEditText
            android:id="@+id/et_invitation_code"
            style="@style/common_clear_able_edit_text_style"
            android:layout_marginTop="10dp"
            android:hint="@string/account_invitation_code"
            android:inputType="text"
            app:textPaddingLeft="10dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_agree_to_the_terms"
                android:textSize="@dimen/font_size_11" />

            <TextView
                android:id="@+id/tv_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/account_terms"
                android:textColor="@color/color_main_light"
                android:textSize="@dimen/font_size_11" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/btn_corner_blue_blue"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/account_register" />
    </LinearLayout>
</ScrollView>