<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_google_verify_qr"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="60dp"
            android:background="@color/color_gray_light2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:lineSpacingExtra="8dp"
            android:text="@string/account_google_verify_qr_tips"
            android:textColor="@color/color_gray_dark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_google_qr_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_15"
                android:text="@string/account_google_verify_secret_key"
                android:textColor="@color/color_gray_dark2" />

            <ImageView
                android:id="@+id/btn_google_qr_copy"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="12dp"
                android:background="@drawable/ic_copy" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_google_qr_previous"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="44dp"
            android:text="@string/account_previous"
            style="@style/btn_corner_hollow_blue"/>

        <Button
            android:id="@+id/btn_google_qr_next_steps"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:text="@string/account_next_step"
            style="@style/btn_corner_blue_blue"/>

    </LinearLayout>
</RelativeLayout>