<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="35dp"
        android:gravity="center_vertical">



        <TextView
            android:id="@+id/et_phone_start_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="9dp"
            android:hint="@string/account_phone_hint"
            android:textSize="@dimen/font_size_14"
            android:background="@drawable/account_line_et_bg"/>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">


        <EditText
            android:id="@+id/et_phone_start_code"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:hint="@string/account_code"
            android:textSize="@dimen/font_size_14"
            android:paddingLeft="10dp"
            android:inputType="number"
            android:background="@drawable/account_line_et_bg"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/color_gray_light1" />

            <Button
                android:id="@+id/btn_phone_start_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_get_code"
                android:textSize="@dimen/font_size_14"
                android:textColor="@drawable/account_btn_code_selector"
                android:background="@null"/>

        </LinearLayout>




    </RelativeLayout>


    <Button
        android:id="@+id/btn_phone_start_confirm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="63dp"
        android:text="@string/account_author_confirm"
        style="@style/btn_corner_blue_blue"/>


</LinearLayout>